--- a/src/components/common/Button/Button.css
+++ b/src/components/common/Button/Button.css
@@ -1,23 +1,18 @@
-.btn {
-    background-color: var(--theme-bg-color-primary);
+.btn21 {
+    background-color: var(--theme-color-primary);
     color: var(--theme-color-secondary);
     padding: 0.5rem 1.5rem;
     border-radius: 3rem;
     font-weight: 600;
     cursor: pointer;
-    border: 2px solid var(--theme-bg-color-primary);
+ 
     text-align: center;
     min-width: 100px;
     text-transform: capitalize;
   }
   
-  .btn:hover {
-    box-shadow: 5px 5px 10px rgba(58, 128, 233, 0.5);
-    transition: all 0.3s;
-  }
-  
-  .outlined-btn {
-    background-color: var(--theme-bg-color-primary);
+  .outlined-btn21 {
+    background-color: transparent;
     color: var(--theme-color-secondary);
     border: 2px solid var(--theme-color-primary);
     padding: 0.5rem 1.5rem;
@@ -29,7 +24,7 @@
     text-transform: capitalize;
   }
   
-  .outlined-btn:hover {
+  .outlined-btn21:hover {
     background-color: var(--theme-color-primary);
     transition: all 0.3s;
   }
