Displayed coin data in grid view
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/src/components/dashboard/List/List.css
+++ b/src/components/dashboard/List/List.css
@@ -19,6 +19,12 @@
     width: 18%;
   }
   
+  .chip-red{
+    color:red;
+  }
+  .chip-green{
+    color:green;
+  }
   .td-image {
     width: 3rem !important;
     margin-right: 2rem;
