--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -1,12 +1,10 @@
 .navbar {
-    position: sticky;
-    top: 0;
     background-color: var(--theme-bg-color-primary);
-    padding: 1.5rem 3rem;
+    padding: 10px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 100;
+    ;
   }
   
   .logo {
@@ -35,15 +33,10 @@
     display: none;
   }
   
-  @media only screen and (max-width: 800px) {
-    .navbar {
-      padding: 1.5rem;
-    }
-  
+  @media only screen and (max-width: 800px) { 
     .logo {
       font-size: 1rem;
     }
-  
     .links {
       display: none;
     }
