Upgraded Grid coin UI using flexbox
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/src/components/dashboard/Tabs/Tabs.css
+++ b/src/components/dashboard/Tabs/Tabs.css
@@ -19,3 +19,9 @@
       width: 95%;
     }
   }
+
+  @media only screen and (max-width:900px){
+    .list-view-34{
+        display: none !important;
+    }
+}
