--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -20,7 +20,7 @@
   
   .link {
     color: var(--grey);
-    font-weight: 600;
+    /* font-weight: 600; */
     font-size: 1rem;
   }
   
@@ -33,7 +33,7 @@
     display: none;
   }
   
-  @media only screen and (max-width: 800px) { 
+  @media only screen and (max-width: 900px) { 
     .logo {
       font-size: 1rem;
     }
