--- a/src/components/dashboard/Grid/Grid.css
+++ b/src/components/dashboard/Grid/Grid.css
@@ -22,3 +22,16 @@
   display: flex;
   justify-content: space-between;
 }
+.rel-obj09{
+  position: relative;
+}
+.rel-obj09 .icon{
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  top:0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
