Upgraded UI of landing page component
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/src/components/common/Header/drawer.css
+++ b/src/components/common/Header/drawer.css
@@ -15,5 +15,6 @@
       background-color: var(--theme-bg-color-primary);
       height: 100vh;
       padding: 15px;
+      padding-top: 10px;
     }
   }
