--- a/src/components/landing-page/Main/Main.css
+++ b/src/components/landing-page/Main/Main.css
@@ -1,122 +1,26 @@
-.flex-info {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 0.5rem 3rem;
+.home80{
+  padding-top: 100px;
+  padding-bottom: 20px;
+}
+.home80 .button{
+  width: 200px;
+  padding-bottom: 20px;
+}
+.home80 .name{
+  font-size: 50px;
+  font-weight: 800;
+}
+.home80 .crypto-icon{
+  width: 100%;
+}
+@media only screen and (max-width:900px){
+  .home80{
+    padding-top: 0;
   }
-  
-  .track-crypto-heading,
-  .real-time-heading {
-    font-size: 6.5rem;
-    margin: 0;
+  .home80 .name, .home80 .para{
+   text-align: center;
   }
-  
-  .track-crypto-heading {
-    color: var(--white);
-    -webkit-text-stroke-width: 3px;
-    -webkit-text-stroke-color: var(--white);
+  .home80 .button{
+    margin: 0 auto;
   }
-  
-  .track-crypto-heading:hover {
-    color: var(--black);
-    -webkit-text-stroke-color: var(--white);
-    transition: all 0.3s;
-  }
-  
-  .real-time-heading {
-    color: var(--blue);
-  }
-  
-  .info-text {
-    font-size: 1rem;
-    color: var(--grey);
-  }
-  
-  .btn-flex {
-    display: flex;
-    justify-content: flex-start;
-    gap: 1.5rem;
-    align-items: center;
-    margin-top: 2rem;
-  }
-  
-  .phone-container {
-    width: 50%;
-    position: relative;
-    padding: 1rem;
-  }
-  
-  .iphone {
-    position: absolute;
-    z-index: 100;
-    min-width: 300px;
-    width: 50%;
-    right: 0;
-  }
-  
-  .gradient {
-    position: absolute;
-    min-width: 250px;
-    width: 40%;
-    top: 8rem;
-    right: 0;
-  }
-  
-  @media only screen and (max-width: 1250px) {
-    .track-crypto-heading,
-    .real-time-heading {
-      font-size: 5rem;
-      margin: 0;
-    }
-  }
-  
-  @media only screen and (max-width: 1000px) {
-    .iphone {
-      min-width: 250px;
-      width: 50%;
-    }
-  
-    .gradient {
-      min-width: 200px;
-      top: 6rem;
-    }
-  }
-  
-  @media only screen and (max-width: 800px) {
-    .flex-info {
-      flex-direction: column;
-    }
-    .phone-container {
-      display: block;
-      margin: auto;
-      margin-top: 3rem;
-    }
-    .iphone {
-      left: -2rem;
-    }
-    .gradient {
-      left: 20%;
-    }
-  
-    .left-component {
-      width: 100%;
-    }
-  
-    .track-crypto-heading,
-    .real-time-heading {
-      font-size: 3rem;
-      text-align: center;
-    }
-  
-    .track-crypto-heading {
-      -webkit-text-stroke-width: 1px;
-    }
-  
-    .info-text {
-      text-align: center;
-    }
-  
-    .btn-flex {
-      justify-content: center;
-    }
-  }
+}
