--- a/src/components/landing-page/Main/Main.css
+++ b/src/components/landing-page/Main/Main.css
@@ -1,6 +1,6 @@
 .home80{
-  padding-top: 100px;
-  padding-bottom: 20px;
+  padding-top: 60px;
+  padding-bottom: 80px;
 }
 .home80 .button{
   width: 200px;
@@ -16,6 +16,7 @@
 @media only screen and (max-width:900px){
   .home80{
     padding-top: 0;
+    padding-bottom: 0;
   }
   .home80 .name, .home80 .para{
    text-align: center;
