Added framer motion animation to the app
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   --theme-bg-color-primary : #111;
-  --theme-bg-color-secondary : #161616;
+  --theme-bg-color-secondary : #1b1b1b;
   --theme-color-primary : #3a80e9;
   --theme-color-secondary: #fff;
 }
